fix(Homepage): Fix banner image not showing on desktop

--- a/src/styles/partials/_banner.scss
+++ b/src/styles/partials/_banner.scss
@@ -51,6 +51,7 @@
   }
 
   @include respond-to(s) {
+    display: block;
     bottom: -15%;
     padding: 0;
     margin: 0 auto;
